--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,13 @@
     <title>My Personal Portfolio</title>
   </head>
   <body>
-    
+
     <!-- A little help for the Netlify bots if you're not using a SSG -->
     <form name="contact" netlify netlify-honeypot="bot-field" hidden>
-      <input type="text" name="name" />
+      <input type="text" name="firstname" />
+      <input type="text" name="lastname" />
       <input type="email" name="email" />
+      <input type="tel" name="tel" />
       <textarea name="message"></textarea>
     </form>
 
