--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
 
-    <!-- A little help for the Netlify bots if you're not using a SSG -->
+    A little help for the Netlify bots if you're not using a SSG
     <form name="contact" netlify netlify-honeypot="bot-field" hidden>
       <input type="text" name="firstname" />
       <input type="text" name="lastname" />
